# halter-challenge-rag

./: .env  README.md  pyproject.toml  requirements.txt
processed_data/: chunks.json
raw_data/: build_effective_ai_agents.md
scripts/: agent.py  ask.py  ask_with_rerank.py  chunking.py  hybrid_search_demo.py  rag.py  search_demo.py  upload_to_pinecone.py
src/: __init__.py  prompts.py
src/agents/: orchestrator.py
src/agents/tools/: __init__.py  query_api_tool.py  rag_tool.py  ticket_tool.py
src/data/: __init__.py  mock_api_data.py
src/document_processing/: __init__.py  chunker.py  metadata_extractor.py
src/generator/: __init__.py  rag_generator.py
src/retriever/: __init__.py  hybrid_search.py  pipeline.py  reranker.py  search.py
src/vectorstore/: __init__.py  embeddings.py  pinecone_store.py
